[2단계 - 블랙잭 베팅] 리건(이한길) 미션 제출합니다. (#693)
* docs: 기능 구현 목록 작성

* feat(Player): 카드를 저장하는 기능 구현

* docs: 기능 구현 목록 수정

* feat(Cards): 52개의 트럼프 카드 생성 로직 구현

* docs: 기능 구현 목록 수정

* feat(Cards): 하나의 카드를 뽑는 기능 구현

* feat(Player): 카드를 받아 저장하는 기능 구현

* docs(README): 모든 참가자들에게 2장 씩 카드를 부여하는 기능 구현 완료

* feat(Game): 모든 참가자들에게 2장의 카드를 나누는 기능 구현

* feat(OutputView): 모든 참가자들에게 2장의 카드를 나누는 기능

* feat: 딜러를 제외한 참가자에게 카드를 더 받을 지 묻는 기능 구현

* feat: 게임에 참여할 사람의 이름을 입력하는 기능 구현

* feat(Player): 가지고 있는 카드의 합계를 계산하는 기능 구현

* feat(Dealer): 딜러가 가지고 있는 카드의 값이 16 이하인지 확인한다.

* feat(Game): 카드의 총합이 16 이하인 동안 딜러에게 카드를 더 주는 기능 구현

* feat: 모든 참가자들의 카드와 최종 점수 출력 기능 구현

* docs: 주석 제거

* feat: 참가자의 점수가 더 높다면 승리로 판단하는 로직 구현

* docs: 기능 구현 목록 수정

* docs: 기능 구현 목록 수정

* feat(Game): 딜러의 점수가 21을 초과한 경우 승패 판단 로직 구현

* feat(Game): 딜러와 참가자 간의 승패를 결정하는 로직 구현

* feat: 블랙잭 게임 결과 출력 로직 구현

* docs: 구현 완료한 기능 목록 체크

* feat: 합계를 계산할 때 총 합이 21이 초과된다면 A를 1로 간주

* feat: 참가자가 카드를 더 받을 지 선택하는 과정에서 에이스 카드의 값을 선택

* refactor: 중복되는 테스트 코드 메소드로 분리

* refactor: 메소드 indent 줄이도록 리팩토링

* refactor: 블랙잭 게임 진행 클래스와 게임 결과 판정 클래스 분리 리팩토링

* refactor: 블랙잭 게임 승패 판단 로직 간소화

* feat: 플레이어가 가지고 있는 카드들의 객체인 Hand 구현

* feat: 카드를 더 받는 것을 결정하는 입력을 ENUM으로 분리

* refactor: 결과 출력 시 딜러를 제외하는 불필요한 로직 제거

* refactor: 플레이어에게 카드를 한 장씩 전달하는 로직 리팩토링

* refactor: Game이 Controller로부터 InputView, OutputView 인스턴스를 주입받도록 수정

* refactor: 플레이어가 카드를 직접 뽑도록 역할 분리

* feat: 예외 메시지 추가

* refactor: 불필요한 메소드 제거 및 테스트 코드 리팩토링

* chore: 검증 로직에서 사용되는 메소드 변경

* docs: 기능 구현 목록 수정

* refactor: View와 도메인 사이의 역할 재할당

* refactor: Round에 있던 딜러가 추가 드로우하기 위한 조건을 Dealer가 가지도록 리팩토링

* refactor: View와 강하게 결합되어 있는 Enum 리팩토링

* refactor: Round에 있는 역할이 모호한 기능들을 더 잘 어울리는 도메인으로 이동

* refactor: View와 강하게 연결된 도메인의 기능을 CardName Enum으로 이동

* refactor: 불필요한 Round 컨트롤러 제거 및, Controller에 있었던 비즈니스 로직들을 도메인으로 이동

* refactor: 비즈니스 로직 도메인으로 이동 및 추가 테스트 작성

* refactor: DTO 생성 책임을 Controller에 부여하고 Controller에 있던 